--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ out/
 
 # variables de entorno
 /src/main/resources/application.properties
+/src/main/resources/application-dev.properties
+/src/main/resources/application-prod.properties
+
+
