--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 HELP.md
 .gradle
-build/
+build/classes
+build/kotlin
+build/resources
+build/tmp
+build/resolvedMainClassName
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
